Added SignalR For BlazorWeb And Added VideoStreamComponent.

--- a/ObjectDetection.MAUI/ObjectDetection.MAUI/ObjectDetection.MAUI.csproj
+++ b/ObjectDetection.MAUI/ObjectDetection.MAUI/ObjectDetection.MAUI.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks>net9.0-android35.0</TargetFrameworks>
         <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
@@ -22,7 +22,7 @@
         <Nullable>enable</Nullable>
 
         <!-- Display name -->
-        <ApplicationTitle>ObjectDetection.MAUI</ApplicationTitle>
+        <ApplicationTitle>ObjectDetection</ApplicationTitle>
 
         <!-- App Identifier -->
         <ApplicationId>com.companyname.objectdetection.maui</ApplicationId>
@@ -69,6 +69,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\ObjectDetection.Shared\ObjectDetection.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Components\Layout\" />
     </ItemGroup>
 
 </Project>
