--- a/ObjectDetection.Shared/ObjectDetection.Shared.csproj
+++ b/ObjectDetection.Shared/ObjectDetection.Shared.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -21,8 +22,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<!--<PackageReference Include="Blazor.Bootstrap" Version="3.2.0" />-->
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
-		<PackageReference Include="Blazor.Bootstrap" Version="3.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
 	</ItemGroup>
 
 </Project>
