--- a/ObjectDetection.MAUI/ObjectDetection.MAUI/ObjectDetection.MAUI.csproj
+++ b/ObjectDetection.MAUI/ObjectDetection.MAUI/ObjectDetection.MAUI.csproj
@@ -73,6 +73,7 @@
 
     <ItemGroup>
       <Folder Include="Components\Layout\" />
+      <Folder Include="wwwroot\js\" />
     </ItemGroup>
 
 </Project>
