--- a/ObjectDetection.WebAPI/Properties/launchSettings.json
+++ b/ObjectDetection.WebAPI/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5176",
+      "applicationUrl": "http://0.0.0.0:7014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7007;http://localhost:5176",
+      "applicationUrl": "https://0.0.0.0:7007;http://0.0.0.0:7014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
