--- a/ObjectDetection.Shared/ObjectDetection.Shared.csproj
+++ b/ObjectDetection.Shared/ObjectDetection.Shared.csproj
@@ -25,6 +25,7 @@
 		<!--<PackageReference Include="Blazor.Bootstrap" Version="3.2.0" />-->
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Maui.Essentials" Version="9.0.60" />
 	</ItemGroup>
 	
 	<ItemGroup>
